modify UR_real KN_real

--- a/kinova_moveit/kinova_arm_moveit_demo/CMakeLists.txt
+++ b/kinova_moveit/kinova_arm_moveit_demo/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED
              pluginlib
              cmake_modules
              geometric_shapes
+             robotiq_2f_gripper_control
 )
 
 find_package(Boost REQUIRED system filesystem date_time thread)
