--- a/rviz_teleop_commander/CMakeLists.txt
+++ b/rviz_teleop_commander/CMakeLists.txt
@@ -1,12 +1,12 @@
 ## BEGIN_TUTORIAL
 ## This CMakeLists.txt file for rviz_plugin_tutorials builds both the TeleopPanel tutorial and the ImuDisplay tutorial.
-##
+## 
 ## First start with some standard catkin stuff.
 cmake_minimum_required(VERSION 2.8.3)
 project(rviz_teleop_commander)
 set (Qt5QtCore_DIR /usr/lib/x86_64-linux-gnu/cmake)
 #set(Qt5Widgets_DIR /usr/lib/x86_64-linux-gnu)
-set(Qt5Widgets_DIR /home/petori/Qt5.12.1/5.12.1/gcc_64/lib/cmake/Qt5Widgets)
+set(Qt5Widgets_DIR /home/wyc/Qt5.8.0/5.8/gcc_64/lib/cmake/Qt5Widgets)
 find_package(catkin REQUIRED 
              COMPONENTS 
              rviz 
